[package]
name = "graph-db-cassie"
version = "1.0.0"
edition = "2021"
description = "Cassandra-backed property graph store for document indexes"

[[bin]]
name = "cassie-api"
path = "src/main.rs"

[dependencies]
scylla = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.27"
opentelemetry = { version = "0.26", features = ["trace"] }
opentelemetry-otlp = { version = "0.26", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio", "trace"] }
axum = "0.7"
axum-prometheus = "0.7"
tower-http = { version = "0.5", features = ["trace"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
